Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6364

S60Style: Colors from themes are not handled correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.1
    • 4.6.0
    • None
    • None
    • Qt 4.6.0 RC, S60, Nokia E71, Theme: Black personal
    • 63318f834671552add4fd584e5aae80523b5f007

    Description

      With some themes

      • text color (QLabel) is almost the same as button color (QPushButton).
      • text color is the same as the background color for that (QLineEdit)

      text #20 submenu popup windows submenu texts #215

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            mtasa Mikko Tasa
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes