Button and LineEdit/TextEdit theme colors are incorrect

QS60Style fetches incorrect color values from theme when using
buttons and lineEdits/TextEdits. New values are the same as in native
widgets (verified from native widget code).

Task-number: QTBUG-6364
Reviewed-by: Alessandro Portale